# he2paleo_c

./: CMakeLists.txt  Doxyfile  build.ps1  conanfile.txt
bench/: bench.cpp
include/: he2paleo.h
src/: he2paleo.c
test/: suite.cpp
